# python-watcher

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  watcher.py
.github/workflows/: build.yml
requirements/: requirements_dev.txt
src/: arguments.py  event.py  watcher.py
src/watcher/: __init__.py  arguments.py  event.py  text_formatting.py  watcher.py
tests/: __init__.py  test_event.py  test_watcher.py
